tests/fixtures/invalid/round_list_float.py
# Cannot call round() with List[int], Float
x = round([1, 2, 3], 1.0)
